<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        app:headerLayout="@layout/button_option" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <RelativeLayout
            android:id="@+id/backgroundpage5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:background="@drawable/background_page5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <View
                android:id="@+id/PictureOliva"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="19.91dp"
                android:layout_marginTop="74.64dp"
                android:background="@drawable/picture_olivia" />

            <TextView
                android:id="@+id/selamat_pag"
                android:layout_width="338dp"
                android:layout_height="46dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="142dp"
                android:layout_marginTop="85dp"
                android:gravity="center_vertical"
                android:lineSpacingExtra="1sp"
                android:text="@string/selamatpagi"
                android:textAppearance="@style/selamatpagi" />

            <TextView
                android:id="@+id/selamat_name"
                android:layout_width="338dp"
                android:layout_height="46dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="142dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="110dp"
                android:text="Olivia Gabrielle"
                android:textStyle="bold"
                android:textAppearance="@style/selamatpagi"
                android:lineSpacingExtra="1sp"
                android:gravity="center_vertical" />

            <TextView
                android:id="@+id/olivia_gabr"
                android:layout_width="318dp"
                android:layout_height="23dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="142dp"
                android:layout_marginTop="145dp"
                android:gravity="center_vertical"
                android:lineSpacingExtra="15sp"
                android:text="@string/email_oliv"
                android:textAppearance="@style/olivia" />

            <HorizontalScrollView
                android:id="@+id/horizontal_view"
                android:layout_width="936dp"
                android:layout_height="180dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="257dp"
                tools:ignore="SpeakableTextPresentCheck">

                <RelativeLayout
                android:id="@+id/horizontal_rel"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                    <View
                        android:id="@+id/murnihorizontal"
                        android:layout_width="317dp"
                        android:layout_height="214dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/page5_1"
                        android:onClick="reedemv" />

                    <RelativeLayout
                        android:id="@+id/scanaquahorizontal"
                        android:layout_width="317dp"
                        android:layout_height="214dp"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@id/murnihorizontal"
                        android:background="@drawable/page5_2"
                        android:onClick="scan">

                        <View
                            android:id="@+id/group_373"
                            android:layout_width="88dp"
                            android:layout_height="21dp"
                            android:layout_below="@id/group_374"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentTop="true"
                            android:layout_marginLeft="124dp"
                            android:layout_marginTop="58dp"
                            android:background="#1A529D" />

                        <View
                            android:id="@+id/rectangle_489"
                            android:layout_width="140dp"
                            android:layout_height="21dp"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentTop="true"
                            android:layout_marginLeft="123dp"
                            android:layout_marginTop="100dp"
                            android:background="#1A529D" />

                        <View
                            android:id="@+id/group_374"
                            android:layout_width="85dp"
                            android:layout_height="85dp"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentTop="true"
                            android:layout_marginLeft="26dp"
                            android:layout_marginTop="51dp"
                            android:background="@drawable/tutup_botol" />

                        <TextView
                            android:id="@+id/scantext"
                            android:layout_width="157dp"
                            android:layout_height="87dp"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentTop="true"
                            android:layout_marginLeft="124dp"
                            android:layout_marginTop="55dp"
                            android:gravity="center_vertical"
                            android:text="@string/scan"
                            android:textAppearance="@style/scan" />
                    </RelativeLayout>

                    <View
                        android:id="@+id/aquahorizontal"
                        android:layout_width="317dp"
                        android:layout_height="214dp"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_toRightOf="@id/scanaquahorizontal"
                        android:background="@drawable/page5_3" />
                </RelativeLayout>
            </HorizontalScrollView>

            <RelativeLayout
                android:id="@+id/id_totaltutupbotol"
                android:layout_width="368dp"
                android:layout_height="258dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="464dp"
                android:background="@drawable/total_tutup_botol"
                android:elevation="10dp">

                <TextView
                    android:id="@+id/some_id"
                    android:layout_width="105dp"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="50dp"
                    android:layout_marginBottom="156dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:lineSpacingExtra="-25sp"
                    android:text="@string/jumlah_Tbotola"
                    android:textAppearance="@style/jumlah_Tbotol" />

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="150dp"
                    android:layout_height="95dp"
                    android:layout_marginLeft="190dp"
                    android:layout_marginTop="130dp"
                    android:background="@drawable/scan_kode"
                    android:onClick="scantp"
                    android:paddingLeft="10dp"
                    android:paddingBottom="13dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:id="@+id/group_362"
                    android:layout_width="355dp"
                    android:layout_height="127dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="772dp"
                    android:elevation="4dp" />

                <ImageView
                    android:id="@+id/group_362a"
                    android:layout_width="355dp"
                    android:layout_height="127dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="772dp"
                    android:elevation="4dp"
                    android:onClick="reedemv2"
                    android:src="@drawable/group_362" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:id="@+id/group_871a"
                    android:layout_width="355dp"
                    android:layout_height="127dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="23dp"
                    android:layout_marginTop="924dp"
                    android:elevation="4dp" />

                <ImageView
                    android:id="@+id/group_871"
                    android:layout_width="355dp"
                    android:layout_height="127dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="923dp"
                    android:elevation="4dp"
                    android:src="@drawable/group_871"
                    android:onClick="undianevg"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:id="@+id/group_873"
                    android:layout_width="355dp"
                    android:layout_height="127dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="18dp"
                    android:layout_marginTop="1076dp"
                    android:elevation="4dp" />

                <ImageView
                    android:id="@+id/group_873a"
                    android:layout_width="355dp"
                    android:layout_height="127dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="18dp"
                    android:layout_marginTop="1076dp"
                    android:elevation="4dp"
                    android:src="@drawable/group_873" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/id_surprisegift"
                android:layout_width="368dp"
                android:layout_height="122dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="1297dp"
                android:background="@drawable/surprisegift"
                android:clipToOutline="true"
                android:elevation="5dp">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="28dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="27dp"
                    android:background="@drawable/tambah_kurang" />
            </RelativeLayout>

            <TextView
                android:id="@+id/vaganza_fie"
                android:layout_width="258dp"
                android:layout_height="28dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="31dp"
                android:layout_marginTop="734dp"
                android:gravity="center_vertical"
                android:lineSpacingExtra="8sp"
                android:text="@string/Vaganza"
                android:textAppearance="@style/Vaganza" />

            <TextView
                android:id="@+id/hadiah_mena"
                android:layout_width="258dp"
                android:layout_height="28dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="31dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="1254dp"
                android:text="@string/hadiahmenarik"
                android:textAppearance="@style/hadiahmenarik"
                android:lineSpacingExtra="8sp"
                android:gravity="center_vertical" />

            <Button
                android:id="@+id/id_sidebar"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="346dp"
                android:layout_marginLeft="346dp"
                android:layout_marginTop="95dp"
                android:background="@drawable/slidebar"
                tools:ignore="SpeakableTextPresentCheck" />

        </RelativeLayout>
    </ScrollView>
</androidx.drawerlayout.widget.DrawerLayout>